--- a/HighQuality_Text2Image_Stable_Diffusion_with_SwinIR_plus_Real_ESRGAN.ipynb
+++ b/HighQuality_Text2Image_Stable_Diffusion_with_SwinIR_plus_Real_ESRGAN.ipynb
@@ -390,6 +390,17 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "prompt = [[\"dslr portrait photo of a girl with long hair, face, eyes, lips, cinematic lighting, model, 4k, sunset forest background, upper torso, professional photography, looking at the camera, beauty, elegant, aesthetic, hd\"]]"
+      ],
+      "metadata": {
+        "id": "DIzYXn35bC_G"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "-YAFLvWWrSdM"
@@ -401,7 +412,7 @@
         "torch.cuda.empty_cache()\n",
         "gc.collect()\n",
         "num_images = 3\n",
-        "prompt = [\"dslr portrait photo of a girl with long hair, face, eyes, lips, cinematic lighting, model, 4k, sunset forest background, upper torso, professional photography, looking at the camera, beauty, elegant, aesthetic, hd\"] * num_images\n",
+        "prompt = prompt * num_images\n",
         "rn = random.randint(0,10000000)\n",
         "\n",
         "# rn=1624589\n",
