--- a/HighQuality_Text2Image_Stable_Diffusion_ls.ipynb
+++ b/HighQuality_Text2Image_Stable_Diffusion_ls.ipynb
@@ -13,7 +13,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#**High Quality Text to Image Generation using Stable Diffusion,Real-ESR and Swin IR**\n",
+        "#**High Quality Text to Image Generation using Stable Diffusion,Real-ESR, Swin IR and GFPGAN**\n",
         "[![github](https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white)](https://github.com/HemantKArya/HqStableDiffusionColab)\n",
         "\n",
         "Generate 4K and FULL HD Images and Artworks for Free Using Stable Diffusion. Don't Forget to give Start at Github and Support Original Authors too 😊.\n",
@@ -88,7 +88,7 @@
         "[![GitHub Stars](https://img.shields.io/github/stars/TencentARC/GFPGAN?style=social)](https://github.com/TencentARC/GFPGAN)\n",
         "[![download](https://img.shields.io/github/downloads/TencentARC/GFPGAN/total.svg)](https://github.com/TencentARC/GFPGAN/releases)\n",
         "\n",
-        "## GFPGAN - Towards Real-World Blind Face Restoration with Generative Facial Prior\n",
+        "## **GFPGAN** - Towards Real-World Blind Face Restoration with Generative Facial Prior\n",
         "\n",
         "GFPGAN is a blind face restoration algorithm towards real-world face images. <br>\n",
         "It leverages the generative face prior in a pre-trained GAN (*e.g.*, StyleGAN2) to restore realistic faces while precerving fidelity. <br>"
@@ -409,7 +409,7 @@
     {
       "cell_type": "code",
       "source": [
-        "prompt = [[\"dslr portrait photo of a girl with long hair, face, eyes, lips, cinematic lighting, model, 4k, sunset forest background, upper torso, professional photography, looking at the camera, beauty, elegant, aesthetic, hd\"]]"
+        "y_prompt = [\"anime village, sunset, makoto shinkai, hd, eye pleasing, bautiful trees, artstation, digital art, 4k\"]"
       ],
       "metadata": {
         "id": "DIzYXn35bC_G"
@@ -430,7 +430,7 @@
         "torch.cuda.empty_cache()\n",
         "gc.collect()\n",
         "num_images = 3\n",
-        "prompt = prompt * num_images\n",
+        "prompt = y_prompt * num_images\n",
         "rn = random.randint(0,10000000)\n",
         "\n",
         "# rn=1624589\n",
