updated using Colaboratory

--- a/HighQuality_Text2Image_Stable_Diffusion_ls.ipynb
+++ b/HighQuality_Text2Image_Stable_Diffusion_ls.ipynb
@@ -13,7 +13,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#**High Quality Text to Image Generation using Stable Diffusion,Real-ESR, Swin IR and GFPGAN**\n",
+        "#**High Quality Text to Image Generation using Stable Diffusion,Real-ESR and Swin IR**\n",
         "[![github](https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white)](https://github.com/HemantKArya/HqStableDiffusionColab)\n",
         "\n",
         "Generate 4K and FULL HD Images and Artworks for Free Using Stable Diffusion. Don't Forget to give Start at Github and Support Original Authors too 😊.\n",
@@ -88,7 +88,7 @@
         "[![GitHub Stars](https://img.shields.io/github/stars/TencentARC/GFPGAN?style=social)](https://github.com/TencentARC/GFPGAN)\n",
         "[![download](https://img.shields.io/github/downloads/TencentARC/GFPGAN/total.svg)](https://github.com/TencentARC/GFPGAN/releases)\n",
         "\n",
-        "## **GFPGAN** - Towards Real-World Blind Face Restoration with Generative Facial Prior\n",
+        "## GFPGAN - Towards Real-World Blind Face Restoration with Generative Facial Prior\n",
         "\n",
         "GFPGAN is a blind face restoration algorithm towards real-world face images. <br>\n",
         "It leverages the generative face prior in a pre-trained GAN (*e.g.*, StyleGAN2) to restore realistic faces while precerving fidelity. <br>"
@@ -398,6 +398,23 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "dir = '/content/upload'\n",
+        "if os.path.isdir(dir):\n",
+        "  for f in os.listdir(dir):\n",
+        "    try:\n",
+        "      os.remove(os.path.join(dir, f))\n",
+        "    except:\n",
+        "      pass"
+      ],
+      "metadata": {
+        "id": "d7kr4j8N3pIW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "AcHccTDWbQRU"
@@ -409,7 +426,7 @@
     {
       "cell_type": "code",
       "source": [
-        "y_prompt = [\"anime village, sunset, makoto shinkai, hd, eye pleasing, bautiful trees, artstation, digital art, 4k\"]"
+        "y_prompt = [\"mountain in far, river with blue reflection, purple pink sky evening magic hour, after sunset,hd wallpaper, some trees branches in front,leafs with shadow\"]"
       ],
       "metadata": {
         "id": "DIzYXn35bC_G"
@@ -468,12 +485,15 @@
         "dir = '/content/upload'\n",
         "if os.path.isdir(dir):\n",
         "  for f in os.listdir(dir):\n",
-        "     os.remove(os.path.join(dir, f))\n",
+        "    try:\n",
+        "      os.remove(os.path.join(dir, f))\n",
+        "    except:\n",
+        "      pass\n",
         "\n",
         "with autocast(\"cuda\"):\n",
         "  images = pipe(prompt,generator=generator, num_inference_steps=100).images\n",
         "  for i,j in enumerate(images):\n",
-        "    j.save(\"./upload/img{}\".format(i)+'.png')\n",
+        "    j.save(\"./upload/img{}-{}\".format(i,rn)+'.png')\n",
         "images_2up = '/content/upload'\n",
         "torch.cuda.empty_cache()\n",
         "grid = image_grid(images, rows=1, cols=3)\n",
@@ -505,13 +525,16 @@
         "dir = '/content/upload'\n",
         "if os.path.isdir(dir):\n",
         "  for f in os.listdir(dir):\n",
-        "     os.remove(os.path.join(dir, f))\n",
+        "    try:\n",
+        "      os.remove(os.path.join(dir, f))\n",
+        "    except:\n",
+        "      pass\n",
         "\n",
         "\n",
         "with autocast(\"cuda\"):\n",
         "  images = pipe(prompt,generator=generator, num_inference_steps=200).images\n",
         "  for i,j in enumerate(images):\n",
-        "    j.save(\"./upload/img{}\".format(i)+'.png')\n",
+        "    j.save(\"./upload/img{}-{}\".format(i,rn)+'.png')\n",
         "torch.cuda.empty_cache()\n",
         "gc.collect()\n",
         "images_2up = '/content/upload'\n",
@@ -547,7 +570,10 @@
         "dir = '/content/results/restored_imgs'\n",
         "if os.path.isdir(dir):\n",
         "  for f in os.listdir(dir):\n",
-        "     os.remove(os.path.join(dir, f))\n",
+        "    try:\n",
+        "      os.remove(os.path.join(dir, f))\n",
+        "    except:\n",
+        "      pass\n",
         "   \n",
         "!python GFPGAN/inference_gfpgan.py -i /content/upload -o /content/results -s 2\n",
         "# os.chdir(\"/content\")\n",
@@ -599,6 +625,7 @@
         "torch.cuda.empty_cache()\n",
         "gc.collect()\n",
         "\n",
+        "# images_2up = \"results/restored_imgs\"\n",
         "imgs_path = sorted(glob.glob(os.path.join(images_2up, '*.png')))\n",
         "imgs = []\n",
         "for path in imgs_path:\n",
@@ -661,6 +688,22 @@
         "torch.cuda.empty_cache()\n",
         "gc.collect()\n",
         "\n",
+        "\n",
+        "dir = '/content/forswin'\n",
+        "if os.path.isdir(dir):\n",
+        "  for f in os.listdir(dir):\n",
+        "    try:\n",
+        "      os.remove(os.path.join(dir, f))\n",
+        "    except:\n",
+        "      pass\n",
+        "dir = '/content/results/swinir_real_sr_x4'\n",
+        "if os.path.isdir(dir):\n",
+        "  for f in os.listdir(dir):\n",
+        "    try:\n",
+        "      os.remove(os.path.join(dir, f))\n",
+        "    except:\n",
+        "      pass\n",
+        "\n",
         "toDown_list = sorted(glob.glob(os.path.join(images_2up, '*.png')))\n",
         "for path in toDown_list:\n",
         "  img = Image.open(path)\n",
@@ -669,10 +712,7 @@
         "\n",
         "# os.chdir(\"/content/SwinIR\")\n",
         "torch.cuda.empty_cache()\n",
-        "dir = '/content/results/swinir_real_sr_x4_large'\n",
-        "if os.path.isdir(dir):\n",
-        "  for f in os.listdir(dir):\n",
-        "     os.remove(os.path.join(dir, f))\n",
+        "\n",
         "\n",
         "\n",
         "!python SwinIR/main_test_swinir.py --task real_sr --model_path /content/experiments/pretrained_models/003_realSR_BSRGAN_DFO_s64w8_SwinIR-M_x4_GAN.pth --folder_lq forswin --scale 4\n",
