Updated using Colaboratory

--- a/HighQuality_Text2Image_Stable_Diffusion_ls.ipynb
+++ b/HighQuality_Text2Image_Stable_Diffusion_ls.ipynb
@@ -398,23 +398,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "dir = '/content/upload'\n",
-        "if os.path.isdir(dir):\n",
-        "  for f in os.listdir(dir):\n",
-        "    try:\n",
-        "      os.remove(os.path.join(dir, f))\n",
-        "    except:\n",
-        "      pass"
-      ],
-      "metadata": {
-        "id": "d7kr4j8N3pIW"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "AcHccTDWbQRU"
@@ -426,7 +409,7 @@
     {
       "cell_type": "code",
       "source": [
-        "y_prompt = [\"mountain in far, river with blue reflection, purple pink sky evening magic hour, after sunset,hd wallpaper, some trees branches in front,leafs with shadow\"]"
+        "y_prompt = [\"mountains, green landscape, breathtaking view, hd, ultrahd,hdr\"]"
       ],
       "metadata": {
         "id": "DIzYXn35bC_G"
@@ -444,6 +427,15 @@
       "source": [
         "import random\n",
         "from torch import autocast\n",
+        "\n",
+        "dir = '/content/upload'\n",
+        "if os.path.isdir(dir):\n",
+        "  for f in os.listdir(dir):\n",
+        "    try:\n",
+        "      os.remove(os.path.join(dir, f))\n",
+        "    except:\n",
+        "      pass\n",
+        "\n",
         "torch.cuda.empty_cache()\n",
         "gc.collect()\n",
         "num_images = 3\n",
