updated using Colaboratory

--- a/HighQuality_Text2Image_Stable_Diffusion_ls.ipynb
+++ b/HighQuality_Text2Image_Stable_Diffusion_ls.ipynb
@@ -257,7 +257,7 @@
       "source": [
         "\n",
         "!git clone https://github.com/TencentARC/GFPGAN.git\n",
-        "os.chdir(\"/content/GFPGAN\")\n",
+        "os.chdir(\"GFPGAN\")\n",
         "\n",
         "\n",
         "!pip install basicsr\n",
@@ -265,18 +265,18 @@
         "!pip install facexlib\n",
         "!pip install -r requirements.txt\n",
         "!python setup.py develop\n",
-        "os.chdir(\"/content/\")\n",
+        "os.chdir(\"..\")\n",
         "\n",
         "#realesr\n",
         "!git clone https://github.com/xinntao/Real-ESRGAN.git\n",
         "# !pip install realesrgan\n",
         "!wget https://github.com/xinntao/Real-ESRGAN/releases/download/v0.1.0/RealESRGAN_x4plus.pth -P /content/Real-ESRGAN/experiments/pretrained_models\n",
-        "os.chdir(\"/content/Real-ESRGAN\")\n",
+        "os.chdir(\"Real-ESRGAN\")\n",
         "!pip install gfpgan\n",
         "!pip install -r requirements.txt\n",
         "!python setup.py develop\n",
         "!python setup.py install\n",
-        "os.chdir(\"/content/\")\n",
+        "os.chdir(\"..\")\n",
         "\n",
         "\n",
         "!wget https://github.com/TencentARC/GFPGAN/releases/download/v1.3.0/GFPGANv1.3.pth -P /content/GFPGAN/experiments/pretrained_models\n",
@@ -291,13 +291,13 @@
     {
       "cell_type": "code",
       "source": [
-        "os.chdir(\"/content/Real-ESRGAN\")\n",
+        "os.chdir(\"Real-ESRGAN\")\n",
         "from realesrgan import RealESRGANer\n",
         "from basicsr.archs.rrdbnet_arch import RRDBNet\n",
         "esrdevice='cuda'\n",
         "with torch.no_grad():\n",
-        "  RealESRUpScale = RealESRGANer(model_path=\"/content/Real-ESRGAN/experiments/pretrained_models/RealESRGAN_x4plus.pth\",scale=4,device=esrdevice,model= RRDBNet(num_in_ch=3, num_out_ch=3, num_feat=64, num_block=23, num_grow_ch=32, scale=4))\n",
-        "os.chdir(\"/content/\")"
+        "  RealESRUpScale = RealESRGANer(model_path=\"./experiments/pretrained_models/RealESRGAN_x4plus.pth\",scale=4,device=esrdevice,model= RRDBNet(num_in_ch=3, num_out_ch=3, num_feat=64, num_block=23, num_grow_ch=32, scale=4))\n",
+        "os.chdir(\"..\")"
       ],
       "metadata": {
         "id": "_DM2JSo6v-1J"
@@ -428,7 +428,7 @@
         "import random\n",
         "from torch import autocast\n",
         "\n",
-        "dir = '/content/upload'\n",
+        "dir = './upload'\n",
         "if os.path.isdir(dir):\n",
         "  for f in os.listdir(dir):\n",
         "    try:\n",
@@ -451,7 +451,7 @@
         "    images = pipe(prompt,generator=generator, num_inference_steps=50).images\n",
         "    for i,j in enumerate(images):\n",
         "      j.save(\"./upload/img{}-{}\".format(i,rn)+'.png')\n",
-        "images_2up = '/content/upload'\n",
+        "images_2up = './upload'\n",
         "torch.cuda.empty_cache()\n",
         "grid = image_grid(images, rows=1, cols=3)\n",
         "grid\n",
@@ -474,7 +474,7 @@
         "gc.collect()\n",
         "generator = torch.Generator(\"cuda\").manual_seed(rn)\n",
         "\n",
-        "dir = '/content/upload'\n",
+        "dir = './upload'\n",
         "if os.path.isdir(dir):\n",
         "  for f in os.listdir(dir):\n",
         "    try:\n",
@@ -486,7 +486,7 @@
         "  images = pipe(prompt,generator=generator, num_inference_steps=100).images\n",
         "  for i,j in enumerate(images):\n",
         "    j.save(\"./upload/img{}-{}\".format(i,rn)+'.png')\n",
-        "images_2up = '/content/upload'\n",
+        "images_2up = './upload'\n",
         "torch.cuda.empty_cache()\n",
         "grid = image_grid(images, rows=1, cols=3)\n",
         "grid\n",
@@ -514,7 +514,7 @@
         "gc.collect()\n",
         "generator = torch.Generator(\"cuda\").manual_seed(rn)\n",
         "\n",
-        "dir = '/content/upload'\n",
+        "dir = './upload'\n",
         "if os.path.isdir(dir):\n",
         "  for f in os.listdir(dir):\n",
         "    try:\n",
@@ -529,7 +529,7 @@
         "    j.save(\"./upload/img{}-{}\".format(i,rn)+'.png')\n",
         "torch.cuda.empty_cache()\n",
         "gc.collect()\n",
-        "images_2up = '/content/upload'\n",
+        "images_2up = './upload'\n",
         "grid = image_grid(images, rows=1, cols=3)\n",
         "grid\n"
       ],
@@ -559,7 +559,7 @@
         "torch.cuda.empty_cache()\n",
         "gc.collect()\n",
         "# os.chdir(\"/content/GFPGAN\")\n",
-        "dir = '/content/results/restored_imgs'\n",
+        "dir = './results/restored_imgs'\n",
         "if os.path.isdir(dir):\n",
         "  for f in os.listdir(dir):\n",
         "    try:\n",
@@ -574,10 +574,10 @@
         "gc.collect()\n",
         "# display each image in the upload folder\n",
         "\n",
-        "images_2up = '/content/results/restored_imgs'\n",
+        "images_2up = './results/restored_imgs'\n",
         "\n",
-        "input_folder = '/content/upload'\n",
-        "result_folder = '/content/results/restored_imgs'\n",
+        "input_folder = './upload'\n",
+        "result_folder = './results/restored_imgs'\n",
         "input_list = sorted(glob.glob(os.path.join(input_folder, '*.png')))\n",
         "output_list = sorted(glob.glob(os.path.join(result_folder, '*.png')))\n",
         "print(len(input_list))\n",
@@ -617,7 +617,7 @@
         "gc.collect()\n",
         "\n",
         "input_folder = images_2up\n",
-        "result_folder = '/content/final'\n",
+        "result_folder = './final'\n",
         "input_list = sorted(glob.glob(os.path.join(input_folder, '*.png')))\n",
         "output_list = sorted(glob.glob(os.path.join(result_folder, '*.png')))\n",
         "display_com(input_list,output_list,output_name=\"Real-ESRGAN\")\n"
@@ -649,14 +649,14 @@
         "gc.collect()\n",
         "\n",
         "\n",
-        "dir = '/content/forswin'\n",
+        "dir = './forswin'\n",
         "if os.path.isdir(dir):\n",
         "  for f in os.listdir(dir):\n",
         "    try:\n",
         "      os.remove(os.path.join(dir, f))\n",
         "    except:\n",
         "      pass\n",
-        "dir = '/content/results/swinir_real_sr_x4'\n",
+        "dir = './results/swinir_real_sr_x4'\n",
         "if os.path.isdir(dir):\n",
         "  for f in os.listdir(dir):\n",
         "    try:\n",
@@ -675,7 +675,7 @@
         "\n",
         "\n",
         "\n",
-        "!python SwinIR/main_test_swinir.py --task real_sr --model_path /content/experiments/pretrained_models/003_realSR_BSRGAN_DFO_s64w8_SwinIR-M_x4_GAN.pth --folder_lq forswin --scale 4\n",
+        "!python SwinIR/main_test_swinir.py --task real_sr --model_path ./experiments/pretrained_models/003_realSR_BSRGAN_DFO_s64w8_SwinIR-M_x4_GAN.pth --folder_lq forswin --scale 4\n",
         "  \n",
         "\n",
         "\n",
@@ -685,7 +685,7 @@
         "# display each image in the upload folder\n",
         "\n",
         "input_folder = images_2up\n",
-        "result_folder = '/content/results/swinir_real_sr_x4'\n",
+        "result_folder = './results/swinir_real_sr_x4'\n",
         "input_list = sorted(glob.glob(os.path.join(input_folder, '*.png')))\n",
         "output_list = sorted(glob.glob(os.path.join(result_folder, '*.png')))\n",
         "display_com(input_list,output_list,output_name=\"Swin\")\n",
@@ -726,9 +726,9 @@
         "  plt.subplots_adjust(wspace=0, hspace=0, left=0, right=1, bottom=0, top=1)\n",
         "  plt.show()\n",
         "\n",
-        "input_folder = '/content/upload'\n",
-        "swin_folder = '/content/results/swinir_real_sr_x4'\n",
-        "esr_folder = '/content/final'\n",
+        "input_folder = './upload'\n",
+        "swin_folder = './results/swinir_real_sr_x4'\n",
+        "esr_folder = './final'\n",
         "input_list = sorted(glob.glob(os.path.join(input_folder, '*.png')))\n",
         "swin_list = sorted(glob.glob(os.path.join(swin_folder, '*.png')))\n",
         "esr_list = sorted(glob.glob(os.path.join(esr_folder, '*.png')))\n",
