updated using colab

--- a/HighQuality_Text2Image_Stable_Diffusion_ls.ipynb
+++ b/HighQuality_Text2Image_Stable_Diffusion_ls.ipynb
@@ -12,6 +12,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "upLwll2nS9QL"
+      },
       "source": [
         "#**High Quality Text to Image Generation using Stable Diffusion,Real-ESR and Swin IR**\n",
         "[![github](https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white)](https://github.com/HemantKArya/HqStableDiffusionColab)\n",
@@ -26,10 +29,7 @@
         "Visit Logical Spot for Video Help:-\n",
         "\n",
         " [![YouTube](https://img.shields.io/badge/YouTube-%23FF0000.svg?style=for-the-badge&logo=YouTube&logoColor=white)](https://www.youtube.com/c/LogicalSpot)"
-      ],
-      "metadata": {
-        "id": "upLwll2nS9QL"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -53,6 +53,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "zsMRD1FeQVvM"
+      },
       "source": [
         "# **Real-ESRGAN**\n",
         "[![arXiv](https://img.shields.io/badge/arXiv-Paper-<COLOR>.svg)](https://arxiv.org/abs/2107.10833)\n",
@@ -60,13 +63,13 @@
         "[![download](https://img.shields.io/github/downloads/xinntao/Real-ESRGAN/total.svg)](https://github.com/xinntao/Real-ESRGAN/releases)\n",
         "\n",
         "Real-ESRGAN aims at developing Practical Algorithms for General Image/Video Restoration.We extend the powerful ESRGAN to a practical restoration application (namely, Real-ESRGAN), which is trained with pure synthetic data."
-      ],
-      "metadata": {
-        "id": "zsMRD1FeQVvM"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "ykPIKg_tRzG8"
+      },
       "source": [
         "# **SwinIR**\n",
         "[![arXiv](https://img.shields.io/badge/arXiv-Paper-<COLOR>.svg)](https://arxiv.org/abs/2108.10257)\n",
@@ -74,13 +77,13 @@
         "[![download](https://img.shields.io/github/downloads/JingyunLiang/SwinIR/total.svg)](https://github.com/JingyunLiang/SwinIR/releases)\n",
         "\n",
         "SwinIR achieves state-of-the-art performance on six tasks: image super-resolution (including classical, lightweight and real-world image super-resolution), image denoising (including grayscale and color image denoising) and JPEG compression artifact reduction. See our [paper](https://arxiv.org/abs/2108.10257) and [project page](https://github.com/JingyunLiang/SwinIR) for detailed results."
-      ],
-      "metadata": {
-        "id": "ykPIKg_tRzG8"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "uFq1WRZFdayX"
+      },
       "source": [
         "### (No colorization; No CUDA extensions required)\n",
         "\n",
@@ -92,10 +95,7 @@
         "\n",
         "GFPGAN is a blind face restoration algorithm towards real-world face images. <br>\n",
         "It leverages the generative face prior in a pre-trained GAN (*e.g.*, StyleGAN2) to restore realistic faces while precerving fidelity. <br>"
-      ],
-      "metadata": {
-        "id": "uFq1WRZFdayX"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -235,17 +235,17 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "9CS0e09d9WoJ"
+      },
+      "outputs": [],
       "source": [
         "# make sure you're logged in with `huggingface-cli login`\n",
         "pipe = StableDiffusionPipeline.from_pretrained(\"CompVis/stable-diffusion-v1-4\", revision=\"fp16\", torch_dtype=torch.float16, use_auth_token=True)  \n",
         "pipe = pipe.to(\"cuda\")\n",
         "# img2imgpipe = StableDiffusionImg2ImgPipeline.from_pretrained(\"CompVis/stable-diffusion-v1-4\",revision=\"fp16\", torch_dtype=torch.float16,use_auth_token=True)"
-      ],
-      "metadata": {
-        "id": "9CS0e09d9WoJ"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
@@ -290,6 +290,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "_DM2JSo6v-1J"
+      },
+      "outputs": [],
       "source": [
         "os.chdir(\"Real-ESRGAN\")\n",
         "from realesrgan import RealESRGANer\n",
@@ -298,12 +303,7 @@
         "with torch.no_grad():\n",
         "  RealESRUpScale = RealESRGANer(model_path=\"./experiments/pretrained_models/RealESRGAN_x4plus.pth\",scale=4,device=esrdevice,model= RRDBNet(num_in_ch=3, num_out_ch=3, num_feat=64, num_block=23, num_grow_ch=32, scale=4))\n",
         "os.chdir(\"..\")"
-      ],
-      "metadata": {
-        "id": "_DM2JSo6v-1J"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -408,19 +408,25 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "y_prompt = [\"mountains, green landscape, breathtaking view, hd, ultrahd,hdr\"]"
-      ],
+      "execution_count": null,
       "metadata": {
+        "colab": {
+          "background_save": true
+        },
         "id": "DIzYXn35bC_G"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "y_prompt = [\"fall , autumn, beautiful forest and colorful, breathtaking view, autumn season, proffesional photogaphy\"]"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "colab": {
+          "background_save": true
+        },
         "id": "-YAFLvWWrSdM"
       },
       "outputs": [],
@@ -460,15 +466,20 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Refine Same Images(Generated in Prev step) with 100 steps. You Can Directly jump to the next Cell"
-      ],
       "metadata": {
         "id": "SJk5KfEdDBYu"
-      }
+      },
+      "source": [
+        "# Refine Same Images(Generated in Prev step) with 100 steps. You Can Directly jump to the next Cell"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "jBX2VVz9BeJZ"
+      },
+      "outputs": [],
       "source": [
         "torch.cuda.empty_cache()\n",
         "gc.collect()\n",
@@ -491,24 +502,24 @@
         "grid = image_grid(images, rows=1, cols=3)\n",
         "grid\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "jBX2VVz9BeJZ"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Refine Same Images(Generated in Prev step) with 200 steps."
-      ],
       "metadata": {
         "id": "Ch8UY6Q_DO2z"
-      }
+      },
+      "source": [
+        "# Refine Same Images(Generated in Prev step) with 200 steps."
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "w1SE6qi5BtxR"
+      },
+      "outputs": [],
       "source": [
         "torch.cuda.empty_cache()\n",
         "gc.collect()\n",
@@ -532,12 +543,7 @@
         "images_2up = './upload'\n",
         "grid = image_grid(images, rows=1, cols=3)\n",
         "grid\n"
-      ],
-      "metadata": {
-        "id": "w1SE6qi5BtxR"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -588,18 +594,34 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# **Real-ESRGAN Upscale**"
-      ],
       "metadata": {
         "id": "5zQLbDEV84wZ"
-      }
+      },
+      "source": [
+        "# **Real-ESRGAN Upscale**"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "background_save": true
+        },
+        "id": "Sme9aQnIJiC9"
+      },
+      "outputs": [],
       "source": [
         "torch.cuda.empty_cache()\n",
         "gc.collect()\n",
+        "\n",
+        "dir = './final'\n",
+        "if os.path.isdir(dir):\n",
+        "  for f in os.listdir(dir):\n",
+        "    try:\n",
+        "      os.remove(os.path.join(dir, f))\n",
+        "    except:\n",
+        "      pass\n",
         "\n",
         "# images_2up = \"results/restored_imgs\"\n",
         "imgs_path = sorted(glob.glob(os.path.join(images_2up, '*.png')))\n",
@@ -610,37 +632,35 @@
         "\n",
         "for i,j in enumerate(imgs):\n",
         "  with torch.no_grad():\n",
-        "    output, _ = RealESRUpScale.enhance(np.array(j), outscale=4)\n",
+        "    output, _ = RealESRUpScale.enhance(np.array(j), outscale=8)\n",
         "  output = Image.fromarray(output)\n",
-        "  output.save(\"final/fin_img_upscaled_{}.png\".format(i))\n",
+        "  output.save(\"final/fin_img_upscaled_{}_{}.jpg\".format(rn,i),quality=98)\n",
         "torch.cuda.empty_cache()\n",
         "gc.collect()\n",
         "\n",
         "input_folder = images_2up\n",
         "result_folder = './final'\n",
-        "input_list = sorted(glob.glob(os.path.join(input_folder, '*.png')))\n",
-        "output_list = sorted(glob.glob(os.path.join(result_folder, '*.png')))\n",
+        "input_list = sorted(glob.glob(os.path.join(input_folder, '*.*')))\n",
+        "output_list = sorted(glob.glob(os.path.join(result_folder, '*.*')))\n",
         "display_com(input_list,output_list,output_name=\"Real-ESRGAN\")\n"
-      ],
-      "metadata": {
-        "id": "Sme9aQnIJiC9"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# **(Optional) Denoise Using SwinIR and Upscale**"
-      ],
       "metadata": {
         "id": "Reiik2GxFfRP"
-      }
+      },
+      "source": [
+        "# **(Optional) Denoise Using SwinIR and Upscale**"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "colab": {
+          "background_save": true
+        },
         "id": "JDZSZ66VW1cr"
       },
       "outputs": [],
@@ -698,15 +718,20 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# **(Optional) Compare ALL Generated images**"
-      ],
       "metadata": {
         "id": "esIeu0OXIPJQ"
-      }
+      },
+      "source": [
+        "# **(Optional) Compare ALL Generated images**"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "WiHUZ9QAGr0l"
+      },
+      "outputs": [],
       "source": [
         "def imread(img_path):\n",
         "  img = cv2.imread(img_path)\n",
@@ -737,27 +762,27 @@
         "print(len(esr_list))\n",
         "\n",
         "compare_all(input_list,swin_list,esr_list)"
-      ],
-      "metadata": {
-        "id": "WiHUZ9QAGr0l"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "c1IZIMhtR-vV"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "collapsed_sections": [],
+      "collapsed_sections": [
+        "QYOlvQ1nQL7c",
+        "SJk5KfEdDBYu",
+        "Ch8UY6Q_DO2z",
+        "qfnEYcfAQwgn"
+      ],
       "machine_shape": "hm",
       "provenance": [],
       "include_colab_link": true
